# DOJO-Beam-Transforms

./: .gitignore  Dockerfile  README.md  RELEASE_TEXT_v3.1.1.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: call_docker_workflows.yaml  call_docker_workflows.yml  call_docker_workflows_dev.yml  call_docker_workflows_prd.yml  docker_uploader.yml  tests_requirements.txt  unit_tests.yml  utils_requirements.txt  utils_tests.yml
data/: california_housing.csv
enums/: BeamRunner.py  DataflowMachineType.py  DojoBeamTransformVersion.py
github/workflows/: utils_tests.yml
pbi_footprint/: pbi_pfx_dims_pipeline_to_trusted.ipynb  pbi_pfx_nsap_pipeline_to_trusted.ipynb  pbi_zcce100I_pipeline_to_staging.ipynb
pipeline_components/: AbstractSchemaProvider.py  AbstractStructuredTransform.py  AutoRunPipeline.py  PipelineOptionsProvider.py  PipelineRunnerInterface.py  data_cleaning.py  data_enrichment.py  data_understand.py  input_file.py  input_files.py  setup.py
pipeline_components/data_cleaning/: DeriveSingleValue.py  DropColumns.py  DropDuplicates.py  FilterColumnValues.py  HandleNaNValues.py  HandleNanValues.py  KeepColumnValues.py  KeepColumns.py  RemoveAccents.py  RenameColumns.py  ReplacePatterns.py  ReplaceRegex.py  ReplaceStartWithFn.py  ReplaceValues.py  TrimValues.py  (+1 more)
unit_test_pipeline_components/: GenericArithmeticOperationTest.ipynb  README.md  RenameColumns.ipynb
unit_tests/: __init__.py
utils/: BigqueryToRaw.py  ParseCsv.py  __init__.py  gcp_utils.py  test_gcp_utils.py  test_utils.py
(+64 files in other folders)
