[tool.poetry]
name = "dojo-beam-transforms"
version = "3.0.0"
description = "New Classes and AbstractPipelines"
authors = ["Gustavo Bandeira da Silva and Giovani Marin"]

packages = [
    { include = "enums", from = "." },
    { include = "pipeline_components", from = "." },
    { include = "utils", from = "." }
]